// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluggableHeatmap Sort config should provide attribute normal as default sort, attribute are sorts as available sorts for 1M + 1VB + 1SB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a2",
      },
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "desc",
      },
    },
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableHeatmap Sort config should provide attribute normal as default sort, attribute area sort as available sorts for 1M + 1SB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a3",
      },
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a3",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableHeatmap Sort config should provide attribute normal as default sort, attribute normal and measuree sorts as available sorts for 1M + 1VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": false,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "desc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableHeatmap heatmap should allow date attribute in column bucket 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "view",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.datedataset",
          "filters": Array [
            Object {
              "attribute": "attr.datedataset",
              "interval": Object {
                "granularity": "GDC.year",
                "interval": Array [
                  -1,
                  0,
                ],
                "name": "name",
                "type": "absolute",
              },
              "overTimeComparisonType": "nothing",
            },
          ],
          "localIdentifier": "a1",
          "showInPercent": null,
          "type": "date",
        },
      ],
      "localIdentifier": "stack",
    },
  ],
  "filters": Object {
    "items": Array [
      Object {
        "aggregation": null,
        "attribute": "attr.datedataset",
        "filters": Array [
          Object {
            "attribute": "attr.datedataset",
            "interval": Object {
              "granularity": "GDC.year",
              "interval": Array [
                -1,
                0,
              ],
              "name": "name",
              "type": "absolute",
            },
            "overTimeComparisonType": "nothing",
          },
        ],
        "localIdentifier": "f1",
        "type": "date",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": Object {},
  "uiConfig": Object {
    "buckets": Object {
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:heatmap/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": false,
        "itemsLimit": 1,
        "title": "Measure",
      },
      "stack": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:heatmap/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Columns",
      },
      "view": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:heatmap/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Rows",
      },
    },
    "exportConfig": Object {
      "supported": true,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;

exports[`PluggableHeatmap should return reference point with one metric, category, stack and valid filters 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": Object {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "view",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": Object {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "stack",
    },
  ],
  "filters": Object {
    "items": Array [
      Object {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": Array [
          Object {
            "attribute": "attr.owner.department",
            "displayFormRef": Object {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": Array [
              Object {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
      Object {
        "aggregation": null,
        "attribute": "attr.stage.iswon",
        "filters": Array [
          Object {
            "attribute": "attr.stage.iswon",
            "displayFormRef": Object {
              "uri": "iswon/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": Array [
              Object {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a2",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": Object {},
  "uiConfig": Object {
    "buckets": Object {
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:heatmap/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": false,
        "itemsLimit": 1,
        "title": "Measure",
      },
      "stack": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:heatmap/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Columns",
      },
      "view": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:heatmap/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Rows",
      },
    },
    "exportConfig": Object {
      "supported": true,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;
